--- a/Signal/translations/ug.lproj/Localizable.strings
+++ b/Signal/translations/ug.lproj/Localizable.strings
@@ -1031,10 +1031,10 @@
 "CONTACT_ABOUT_SHEET_CONNECTION_IN_SYSTEM_CONTACTS" = "%1$@ سىزنىڭ سىستېما ئالاقىداش تىزىملىكىڭىزدە";
 
 /* Indicates that the user has no messages with the other account. Embeds {{name}} */
-"CONTACT_ABOUT_SHEET_NO_DIRECT_MESSAGES" = "No direct messages with %1$@";
+"CONTACT_ABOUT_SHEET_NO_DIRECT_MESSAGES" = "%1$@ بىلەن بىۋاسىتە ئۇچۇرلاشماڭ";
 
 /* Indicates that the user has a pending request with the other account. Embeds {{name}} */
-"CONTACT_ABOUT_SHEET_PENDING_REQUEST" = "Pending message request";
+"CONTACT_ABOUT_SHEET_PENDING_REQUEST" = "كۈتۈۋاتقان ئۇچۇر تەلىپى";
 
 /* A label indicating a user is a signal connection. */
 "CONTACT_ABOUT_SHEET_SIGNAL_CONNECTION_LABEL" = "Signal ئۇلىنىشى";
@@ -2552,7 +2552,7 @@
 "FIND_ACCOUNT_INFO_SHEET_TITLE" = "ھېسابات ئۇچۇرلىرىڭىزنى ئىزدەش";
 
 /* A footer below the username text field describing what should be entered */
-"FIND_BY_USERNAME_FOOTER" = "Enter a full username with its set of digits";
+"FIND_BY_USERNAME_FOOTER" = "بىر يۈرۈش رەقەم بار ئىشلەتكۈچى نامىنى كىرگۈزۈڭ";
 
 /* A placeholder value for the text field for finding an account by their username */
 "FIND_BY_USERNAME_PLACEHOLDER" = "ئىشلەتكۈچى نامى";
@@ -4010,7 +4010,7 @@
 "MESSAGE_REQUEST_LEAVE_AND_DELETE_GROUP_TITLE" = "ئۆچۈرۈپ ۋە گۇرۇپپىدىن ئايرىلامسىز؟";
 
 /* Banner label notifying user that a new message is from a user with the same name as an existing contact */
-"MESSAGE_REQUEST_NAME_COLLISION_BANNER_LABEL" = "This person has the same name as another contact";
+"MESSAGE_REQUEST_NAME_COLLISION_BANNER_LABEL" = "بۇ كىشىنىڭ ئىسمى يەنە بىر ئالاقىداش بىلەن ئوخشاش";
 
 /* A header string informing the user about name collisions in a message request */
 "MESSAGE_REQUEST_NAME_COLLISON_HEADER" = "كىمنىڭ ئىلتىماسى ئىكەنلىكىنى جەزملەشتۈرەلمىسىڭىز، ئاستىدىكى ئالاقەداشلارنى كۆزدىن كەچۈرۈڭ ۋە مۇناسىپ مەشغۇلات قىلىڭ.";
@@ -4331,7 +4331,7 @@
 "NO_CONTACTS_SEARCH_BY_PHONE_NUMBER" = "تېلېفون نومۇرى بىلەن ئالاقىداشلارنى تېپىڭ";
 
 /* Label for a button that lets users search for contacts by username */
-"NO_CONTACTS_SEARCH_BY_USERNAME" = "Find Contacts by Username";
+"NO_CONTACTS_SEARCH_BY_USERNAME" = "ئالاقىداشلارنى ئىشلەتكۈچى نامى بىلەن تېپىش";
 
 /* A string describing that the user has no groups in common with another user */
 "NO_GROUPS_IN_COMMON" = "ئورتاق گۇرۇپپا يوق";
@@ -7301,7 +7301,7 @@
 "STORY_VIEWS_OFF" = "كۆرۈپ بېقىش ئېتىك";
 
 /* Toast indicating that the user has copied their subscriber ID. (Externally referred to as donor ID) */
-"SUBSCRIPTION_SUBSCRIBER_ID_COPIED_TO_CLIPBOARD" = "Copied donor id to clipboard";
+"SUBSCRIPTION_SUBSCRIBER_ID_COPIED_TO_CLIPBOARD" = "ئىئانە قىلغۇچى ID سى چاپلاش تاختىسىغا كۆچۈرۈلدى";
 
 /* Alert body after verifying privacy with {{other user's name}} */
 "SUCCESSFUL_VERIFICATION_DESCRIPTION" = "سىزنىڭ %1$@ بىلەن بولغان بىخەتەرلىك نومۇرىڭىز ئۆز-ئارا ماس كەلدى. بۇ ئالاقىداشقا دەلىللەنگەن دەپ بەلگە قويسىڭىز بولىدۇ.";
