--- a/Signal/translations/ug.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ug.lproj/PluralAware.stringsdict
@@ -428,7 +428,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%1$d group members have the same name.</string>
+			<string>%1$d گۇرۇپپا ئەزاسىنىڭ نامى ئوخشاش.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_MULTIPLE_COLLISIONS_BANNER_TITLE_%d</key>
@@ -442,7 +442,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%1$d name conflicts were found in this group.</string>
+			<string>بۇ گۇرۇپپىدا %1$d ئىسىم توقۇنۇشى بايقالدى.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBERSHIP_NAME_COLLISION_MEMBER_COUNT_%d</key>
@@ -484,7 +484,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>%1$d group members have the same name. Review the members below or choose to take action.</string>
+			<string>%1$d گۇرۇپپا ئەزاسىنىڭ نامى ئوخشاش. تۆۋەندىكى ئەزالارنى كۆرۈڭ ياكى مۇناسىپ مەشغۇلاتنى تاللاڭ.</string>
 		</dict>
 	</dict>
 	<key>GROUP_MEMBER_COUNT_LABEL_%d</key>
